# Mizzou-Dining-Android

./: README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: NOTE.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myapplication/: HaversineAlgorithm.java  Location.java  MainActivity.java  TimeBlock.java  Util.java
app/src/main/java/com/example/myapplication/ui/home/: HomeFragment.java
app/src/main/java/com/example/myapplication/ui/locations/: LocationsFragment.java  LocationsViewModel.java
app/src/main/java/com/example/myapplication/ui/search/: SearchFragment.java  SearchViewModel.java
app/src/main/res/drawable/: ic_locations_black_24dp.xml
app/src/main/res/layout/: activity_main.xml  fragment_home.xml  fragment_locations.xml  fragment_search.xml  list_item_textview.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
distribution/libxml2/include/libxml/: xmlversion.h
distribution/libxml2/lib/armeabi-v7a/: libxml2.la
gradle/wrapper/: gradle-wrapper.properties
libxml2_build_scripts/: README.md  build_all.sh  build_android_arm.sh  build_android_arm64.sh  build_android_x64.sh  build_android_x86.sh  build_gnulinux_x64.sh
